@@ -2,6 +2,7 @@
 
 	* config.c: New subsection "status" for all read-only values.
 	* config.c: New subsection "action" for simple camera actions.
+	* library.c: Enable event mode on EOS Cameras on connect.
 
 2009-07-15  Axel Waggershauser  <awagger@web.de>
 
